--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
 html, body {
     margin: 0px;
     font-family: monospace;
+    background-color: rgb(228, 158, 255);
+}
+
+#top {
+    text-decoration: none;
+    color: white;
+    border-radius: 3px;
+    border: 1px solid violet;
+    background: plum;
+    padding: 5px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+
+    position: fixed;
+    bottom: 3vh;
+    right: 2vw;
+}
+
+#top.visible {
+    opacity: 1;
 }
 
 .logo {
@@ -32,24 +52,106 @@ html, body {
 .directories a {
     text-decoration: none;
     background: rgb(113, 0, 136);
+    /* border-top: 10px solid rgb(100, 0, 104); 
+    margin-top: -10px; */
     color: white;
     padding: 20px;
+
+    transition: background-color 0.5s ease;
+    transition: border-top 0.3s ease;
 }
 
 .directories a:hover {
     border-top: 10px solid darkmagenta;
     margin-top: -10px;
-    background: violet;
+    background: rgb(199, 0, 199);
 }
 
 .webtitle {
     height: 625px;
 
     /* border: 1px solid purple; */
-    background: rgb(216, 114, 216);
+    /* background: rgb(216, 114, 216); */
+    background-image: url("images/purple.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     color: white;
 
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.webtitle h1 {
+    border: 10px solid purple;
+    border-radius: 100px;
+    padding: 100px;
+    background-color: aliceblue;
+    color: darkorchid;
+
+    transition: color 0.3s ease;
+    transition: background-color 0.3s ease;
+}
+
+.webtitle h1:hover {
+    color: rgb(252, 203, 255);
+    background-color: purple;
+}
+
+hr {
+    border: none;
+    border-top: 1px solid purple;
+    width: 95%;
+    justify-content: center;
+    height: 0;
+}
+
+h3 {
+    padding: 0 10px 0 10px;
+    color: purple;
+    font-size: x-large;
+    font-weight: bolder;
+    font-family: system-ui;
+}
+
+h3:hover {
+    color: rgb(165, 0, 165);
+}
+
+.block {
+    display: flex;
+    padding: 10px;
+    gap: 10px;
+}
+
+.block div, .block img {
+    border: 10px solid purple;
+    border-radius: 20px;
+    background-color: rgb(246, 254, 255);
+    height: 100%;
+}
+
+.block div div {
+    border: none;
+}
+
+.body_text {
+    padding: 5px;
+}
+
+footer {
+    padding: 10px;
+    font-family: Cambria;
+    background-color: blueviolet;
+    color: violet;
+}
+
+footer span {
+    display: inline-block;
+    transform: translate(0px);
+    transition: transform 1s ease;
+}
+
+footer:hover span {
+    transform: translateX(40vw);
 }
